arete-macros/tests/ui/validation_errors/unknown_top_level_arg.rs
use arete_macros::arete;

#[arete(unknown = "value")]
mod broken {}

fn main() {}
